<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MailCircle</string>
    <string name="action_settings">Settings</string>
    <string name="pref_accounts">Accounts</string>
    <string name="pref_color">Color</string>
    <string name="pref_name">Name</string>
    <string name="pref_enable">Enable</string>
    <string name="pref_about">About</string>
    <string name="pref_notification">Notification</string>
    <string name="pref_title_enable_notification">Notifications</string>
    <string name="pref_notification_style">Icon style</string>
    <string name="notif_title">Unread emails</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_website">Website</string>
    <string name="pref_summary_website">https://johnsto.co.uk/software</string>
    <string name="pref_title_source">Source code</string>
    <string name="pref_summary_source">https://github.com/johnsto/mailcircle</string>
    <string name="dialog_no_accounts_title">No accounts found</string>
    <string name="dialog_no_accounts_message">MailCircle requires that you have at least one GMail account on your device.</string>
    <string name="pref_title_license">Open source license</string>
    <string name="pref_summary_license">GNU General Public License, v2</string>
    <string name="dialog_license">Open source license</string>

    <string name="title_activity_settings">Settings</string>

    <string-array name="pref_labels">
        <item>Priority Inbox</item>
        <item>Inbox</item>
        <item>All Mail</item>
    </string-array>

    <string-array name="pref_labels_values">
        <item>priority_inbox</item>
        <item>inbox</item>
        <item>all</item>
    </string-array>

    <string-array name="pref_colors">
        <item>Red</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Deep Purple</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Lime</item>
        <item>Yellow</item>
        <item>Amber</item>
        <item>Orange</item>
        <item>Deep Orange</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Blue Grey</item>
        <item>Black</item>
    </string-array>

    <string-array name="pref_colors_values">
        <item>#FFF44336</item>
        <item>#FFE91E63</item>
        <item>#FF9C27B0</item>
        <item>#FF673AB7</item>
        <item>#FF3F51B5</item>
        <item>#FF2196F3</item>
        <item>#FF03A9F4</item>
        <item>#FF00BCD4</item>
        <item>#FF009688</item>
        <item>#FF4CAF50</item>
        <item>#FF8BC34A</item>
        <item>#FFCDDC39</item>
        <item>#FFFFEB3B</item>
        <item>#FFFFC107</item>
        <item>#FFFF9800</item>
        <item>#FFFF5722</item>
        <item>#FF795548</item>
        <item>#FF9E9E9E</item>
        <item>#FF607D8B</item>
        <item>#FF000000</item>
    </string-array>

    <string-array name="pref_notification_styles">
        <item>Disc</item>
        <item>Pie</item>
        <item>Ring</item>
    </string-array>

    <string-array name="pref_notification_styles_values">
        <item>disc</item>
        <item>pie</item>
        <item>ring</item>
    </string-array>

</resources>
